SDIT-3796: 🔥 Remove unused POST /api/offenders/adjudication-hearings